fix: disable SecurityManager at runtime when using Java 18 and above